<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufcg.empsoft.foodroute.activities.LoginActivity"
    android:background="@drawable/background">
    <ImageView
        app:srcCompat="@drawable/ic_logo"
        android:id="@+id/imageView2"
        android:scaleType="fitCenter"
        android:layout_width="match_parent"
        android:layout_height="150dp" />
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        app:srcCompat="@drawable/ic_name"
        android:id="@+id/imageView3"/>


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@drawable/bt_background"
                    android:layout_height="50dp"
                    android:layout_width="300dp"
                    android:drawablePadding="-50dip"
                    android:paddingLeft="10dip"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textColorHighlight="@android:color/white"
                    android:textColorLink="@android:color/white"
                    android:drawableLeft="@drawable/ic_user"
                    android:layout_marginBottom="15dp"/>




                <EditText
                    android:id="@+id/password"
                    android:drawablePadding="-50dip"
                    android:paddingLeft="10dip"
                    android:layout_height="50dp"
                    android:layout_width="300dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="@drawable/bt_background"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textColorHighlight="@android:color/white"
                    android:textColorLink="@android:color/white"
                    android:drawableLeft="@drawable/ic_pass"/>


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:background="@drawable/bt_enter_background"
                android:layout_height="50dp"
                android:layout_width="300dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorEnterBt"
                android:textStyle="bold" />

            <TextView
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                style="?android:textAppearanceSmall"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="15dp"/>

        </LinearLayout>
</LinearLayout>
